--- a/package.json
+++ b/package.json
@@ -1,6 +1,13 @@
 {
+  "scripts": {
+    "format": "prettier --write 'src/**/*.ts'"
+  },
   "dependencies": {
     "@types/node": "^20.12.7",
     "typescript": "^5.4.5"
+  },
+  "type": "module",
+  "devDependencies": {
+    "prettier": "^2.3.0"
   }
 }
