--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   },
   "dependencies": {
     "@types/node": "^20.12.7",
+    "fastify": "^4.26.2",
     "typescript": "^5.4.5"
   },
   "type": "module",
